# school-managed-system

./: PROJECT_STRUCTURE.html  PROJECT_STRUCTURE.md  README.md
.github/workflows/: telegram-notify.yml  whatsapp-push-notify-action.yml
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
backend/alembic/: env.py  rls.py  script.py.mako
backend/alembic/versions/: 2026_07_20_0417-75f594204a1c_bootstrap_tenancy_and_auth.py  2026_07_20_0841-65f26101542e_add_classes_sections_and_students.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: health.py
backend/app/common/: repository.py  schemas.py
backend/app/common/email/: sender.py  templates.py
backend/app/common/email/templates/: otp.html  otp.txt
backend/app/core/: config.py  context.py  exceptions.py  logging.py  otp.py  security.py
backend/app/db/: base.py  mixins.py  registry.py  session.py
backend/app/middleware/: request_context.py
backend/app/modules/: __init__.py
backend/app/modules/academics/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/students/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/tenancy/: models.py  repository.py  router.py  schemas.py  service.py
backend/docker/: Dockerfile
backend/scripts/: create_super_admin.py  dump_openapi.py  init-db.sql  smoke_auth.sh
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_academics.py  test_auth_flows.py  test_health.py  test_rls.py  test_students.py  test_tenancy.py
backend/tests/unit/: test_email.py  test_otp.py
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: login-form.tsx  page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(auth)/reset-password/: page.tsx  reset-password-form.tsx
frontend/src/app/(auth)/verify-email/: page.tsx  verify-email-form.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/admissions-queue/: admissions-queue-view.tsx  page.tsx
frontend/src/app/(dashboard)/classes/: class-form-dialog.tsx  classes-view.tsx  page.tsx  section-form-dialog.tsx
frontend/src/app/(dashboard)/dashboard/: dashboard-view.tsx  page.tsx
frontend/src/app/(dashboard)/schools/: page.tsx  school-form-dialog.tsx  schools-view.tsx
frontend/src/app/(dashboard)/settings/: page.tsx  settings-view.tsx
frontend/src/app/(dashboard)/students/: page.tsx  student-form-dialog.tsx  students-view.tsx
frontend/src/components/: confirm-dialog.tsx  data-states.tsx  page-header.tsx  pagination.tsx  providers.tsx  status-badge.tsx
frontend/src/components/form/: field.tsx
frontend/src/components/layout/: app-shell.tsx  sidebar-nav.tsx  user-menu.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  misc.tsx  select.tsx  table.tsx  toast.tsx  use-toast.tsx
frontend/src/hooks/: use-classes.ts  use-debounced-value.ts  use-schools.ts  use-students.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts  config.ts  errors.ts  query-keys.ts  schema.d.ts  types.ts
frontend/src/lib/api/resources/: classes.ts  (+2 more)
frontend/src/lib/auth/: permissions.ts  session.ts
frontend/src/lib/validation/: auth.ts  classes.ts  schools.ts  students.ts
(+9 files in other folders)
