[project]
name = "sms-backend"
version = "0.1.0"
description = "Multi-tenant School Management System - FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # --- Web framework ---
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",       # form parsing (OAuth2 password flow, file uploads)
    # --- Validation & configuration ---
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "email-validator>=2.2.0",         # enables pydantic EmailStr
    # --- Persistence ---
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",                # async PostgreSQL driver
    "alembic>=1.17.0",
    # --- Security ---
    "pyjwt>=2.11.0",                  # NOT python-jose (unmaintained, CVE-prone)
    "pwdlib[argon2]>=0.3.0",          # NOT passlib (unmaintained, breaks on bcrypt>=4.1)
    # --- Observability ---
    "structlog>=25.5.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "aiosqlite>=0.21.0",              # in-memory DB for fast unit tests
]

# ---------------------------------------------------------------------------
# Ruff: single tool for linting + formatting (replaces black + isort + flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort (import ordering)
    "N",         # pep8-naming
    "UP",        # pyupgrade  -> forces modern syntax (X | None over Optional[X])
    "B",         # bugbear    -> catches mutable defaults, unused loop vars
    "C4",        # comprehensions
    "SIM",       # simplify
    "ASYNC",     # async antipatterns (blocking calls in async def)
    "RUF",
]
ignore = [
    "B008",      # function call in default arg -- required by FastAPI's Depends()
]

[tool.ruff.lint.isort]
# Without this, ruff treats `app` as a third-party package and shuffles our own
# imports in among fastapi/sqlalchemy, which makes diffs noisy and reviews harder.
known-first-party = ["app", "tests"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501", "I001"]   # autogenerated files
"tests/*" = ["S101"]                       # assert is the point of tests
# Settings fields are SCREAMING_CASE by convention so they mirror the env var names
# exactly (POSTGRES_HOST -> Settings.POSTGRES_HOST). Computed properties that build
# on them keep that casing for consistency.
"app/core/config.py" = ["N802"]

# ---------------------------------------------------------------------------
# mypy: type checking. Strict for our code, lenient for third-party stubs.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"                 # no @pytest.mark.asyncio needed on every test
asyncio_default_fixture_loop_scope = "function"
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]
